# fastapi_llmops_demo

./: .gitignore  README.md
customer_support/: pyproject.toml
customer_support/src/customer_support/backend/: agents.py  api.py  constants.py  mlflow.db
customer_support/src/customer_support/frontend/: app.py
customer_support/src/customer_support/monitoring/: eval_data.json  mlflow.db  monitoring.ipynb  prompts.ipynb
