[project]
name = "customer-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kokchun", email = "kokchungiang@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
customer-support = "customer_support:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
